# vulnops-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
data/: README.md  snapshot_index.json
scripts/: build_snapshot_cache.py  compare_training_speeds.py  dump_mlx_generation.py  evaluate_lora.py  evaluate_mlx.py  generate_sft_data.py  prepare_mlx_data.py  run_lora_pipeline.py  run_mlx_benchmark.sh  run_mlx_training.py  save_mlx_speed.py  save_pytorch_baseline_speed.py  start_mlx_training.sh  train_lora_sft.py
server/: Dockerfile  __init__.py  app.py  cases.py  graders.py  vuln_triage_env_environment.py
tests/: test_environment.py
